# cheops-ng

./: .autotools  .cproject  .project  AUTHORS  CHANGES  CMakeLists.txt  COPYING  INSTALL  Makefile.in  README  RELEASE  ReleaseNotes  agent-adns.c  agent-discover.c  agent-map.c  agent-probe.c  agent-settings.c  autogen.sh  cache.c  cerror.c  cerror.h  cheops-agent.c  cheops-agent.cmake  cheops-gui.c  cheops-main.c  cheops-ng-static.spec  cheops-ng.cmake  cheops-ng.desktop  cheops-ng.spec  cheops-ng.spec.in  cheops-sh-guts.c  cheops-sh.c  cheops.h  configure  configure.in  event.c  gui-canvas.c  gui-dns.c  gui-handlers.c  gui-io.c  (+15 more)
0.2.3/: README.md
0.2.3/Fedora Linux x86_64 RPM/: cheops-ng-0.2.3-1.x86_64.rpm
0.2.3/RPMS/x86_64/: cheops-ng-debuginfo-0.2.3-1.x86_64.rpm
0.2.3/SOURCES/: cheops-ng-0.2.3.tar
0.2.3/SOURCES/cheops-ng-0.2.3/: cheops-agent.c  cheops-monitoring.h  cheops-sh.h  configure.in  gui-sched.h  io.h  misc.c
0.2.3/SOURCES/cheops-ng-0.2.3/pixmaps/: NetVanta1224ST.xpm  linux.xpm  netopia.xpm  qnx.xpm  redback.xpm  router.xpm
0.2.3/SOURCES/cheops-ng-static-0.2.3/: agent-nmapxml.h  agent-probe.c  cheops-agent.h  cheops-gui.h  cheops-ng-static.spec  gui-canvas.h  gui-config.h  gui-utils.h  gui-viewspace.c  io.c  ip_utils.h
0.2.3/SOURCES/cheops-ng-static-0.2.3/doc/: IO.txt
0.2.3/SOURCES/cheops-ng-static-0.2.3/pixmaps/: cheops.xpm  cisco.xpm
0.2.3/SOURCES/patches/: cheops-ng-rename_clog.patch
0.2.3/SPECS/: cheops-ng-static.spec  cheops-ng.spec
0.2.3/SRPMS/: cheops-ng-0.2.3-1.src.rpm  cheops-ng-0.2.3-9.src.rpm  cheops-ng-static-0.2.3-1.src.rpm
adns-1.0/: .cvsignore  config.cache  settings.make
adns-1.0/client/: adnslogres.c
cmake_build/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake  output.txt  packages.txt
cmake_build/lib/: Makefile  cmake_install.cmake
cmake_build/src/: Makefile  cmake_install.cmake
config/: FindGNOME.cmake  FindGNOME12.cmake  FindIMLIB.cmake  FindIMLIB2.cmake  FindLIBXML.cmake  FindLIBXML2.cmake  cheops-ng-static.spec.in  cheops-ng.desktop.in  config.h.in  gpl.c.in  gpl.cmake  version.h.in
dependencies/: CMakeLists.txt  gnome.cmake
doc/: LOGGER.txt
include/: agent-map.h  agent-probe.h  cache.h  cheops-config.h  gui-dns.h  gui-monitoring.h  gui-sched.h  installdir.h  io.h  probe.h  sched.h  script.h  version.h
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/adns-1.0/: config.status  configure
lib/adns-1.0/src/: adns.h
pixmaps/: macosx.xpm
share/: CMakeLists.txt
src/: CMakeLists.txt  agent-discover.c  agent-nmapxml.c  cheops-gui.c  cheops-sh.c  gui-io.c  gui-monitoring.c  gui-sched.c  gui-service.c  gui-utils.c  io-gk.c  io.c  ip_utils.c  sched.c  script.c  test-probe.c  test-socket.c
