#=cheops-ng====================================================================
# Name		:
# Author	:
# Version	:
# Copyright	:
# Description	:
# Module	:
# Created	:
# Modified	:
#==============================================================================
cmake_minimum_required(VERSION 2.8)

message(STATUS "Building Libraries")

#add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/adns-1.0")
